Improve bridge-backed indexing, completion, and formatting